# jiminy

./: # Making Jiminy the De Facto Zero-Copy S.md  .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  Yep — this is exactly the moment to stop.rs
.github/agents/: jiminy-architect.agent.md
.github/workflows/: ci.yml
bench/anchor-vault/: Cargo.toml
bench/anchor-vault/src/: lib.rs
bench/jiminy-vault/: Cargo.toml
bench/jiminy-vault/src/: lib.rs  processor.rs
bench/pinocchio-vault/: Cargo.toml
bench/pinocchio-vault/src/: lib.rs  processor.rs
bench/runner/: Cargo.toml
bench/runner/benches/: vault_cu.rs
bench/runner/src/: lib.rs
crates/jiminy-anchor/: Cargo.toml  README.md
crates/jiminy-anchor/src/: lib.rs
crates/jiminy-core/: Cargo.toml  README.md
crates/jiminy-core/fuzz/: Cargo.toml
crates/jiminy-core/fuzz/fuzz_targets/: fuzz_best_effort.rs  fuzz_header.rs  fuzz_overlay.rs  fuzz_segment_table.rs  fuzz_zero_copy_slice.rs
crates/jiminy-core/src/: abi.rs  account_io.rs  accounts.rs  asserts.rs  checks.rs  cursor.rs  event.rs  field.rs  header.rs  instruction.rs  interface.rs  lib.rs  lifecycle.rs  log.rs  math.rs  packed.rs  pda.rs  pod.rs  prelude.rs  programs.rs  state.rs  state_utils.rs  sysvar.rs  time.rs
crates/jiminy-core/src/account/: bits.rs  collection.rs  cursor.rs  header.rs  lifecycle.rs  list.rs  mod.rs  overlay.rs  pod.rs  reader.rs  segment.rs  verified.rs  view.rs  writer.rs
crates/jiminy-core/src/check/: mod.rs  pda.rs
crates/jiminy-core/src/compat/: mod.rs  szc.rs
crates/jiminy-core/tests/: account_abi.rs  macro_ergonomics.rs  proptest_abi.rs  segments.rs
crates/jiminy-distribute/: Cargo.toml  README.md
crates/jiminy-distribute/src/: distribute.rs  lib.rs
crates/jiminy-finance/: Cargo.toml  README.md
crates/jiminy-finance/src/: amm.rs  lib.rs  prelude.rs  slippage.rs
crates/jiminy-layouts/: Cargo.toml  README.md
crates/jiminy-layouts/src/: lib.rs
crates/jiminy-lending/: Cargo.toml  README.md
crates/jiminy-lending/src/: lending.rs  lib.rs
crates/jiminy-multisig/: Cargo.toml  README.md
crates/jiminy-multisig/src/: lib.rs  multisig.rs
crates/jiminy-schema/: Cargo.toml  README.md
crates/jiminy-schema/src/: codegen.rs  idl.rs  indexer.rs  lib.rs
crates/jiminy-schema/tests/: integration.rs
crates/jiminy-solana/: Cargo.toml  README.md
crates/jiminy-solana/src/: authority.rs  balance.rs  compose.rs  compute.rs  cpi.rs  introspect.rs  lib.rs  oracle.rs  prelude.rs  twap.rs  upgrade.rs
crates/jiminy-solana/src/cpi/: guard.rs  mod.rs  return_data.rs  safe.rs
crates/jiminy-solana/src/crypto/: ed25519.rs  merkle.rs  mod.rs
crates/jiminy-solana/src/token/: account.rs  ext.rs  mint.rs  mod.rs
crates/jiminy-staking/: Cargo.toml  README.md
crates/jiminy-staking/src/: lib.rs  staking.rs
crates/jiminy-vesting/: Cargo.toml  README.md
crates/jiminy-vesting/src/: lib.rs  vesting.rs
docs/: ABI_VERSIONING.md  ACCOUNT_ABI_CONTRACT.md  ANCHOR_COMPARISON.md  AUDIT_PREP.md  COMPETITOR_FRAMEWORK_ANALYSIS.md  ECOSYSTEM_RESEARCH_REPORT.md  HOT_PATH_COOKBOOK.md  Hopper Architecture Lock (v0.rs  LAYOUT_CONVENTION.md  LAYOUT_ID_COLLISION_ANALYSIS.md  MIGRATION_COOKBOOK.md  PINOCCHIO_RESEARCH_REPORT.md  ROADMAP_V1.md  SAFETY_MODEL.md  SAFE_COMPOSITION.md  SEGMENTED_ABI.md  STEEL_FRAMEWORK_ANALYSIS.md  UNSAFE_INVENTORY.md  WHY_JIMINY.md  jiminy.code-workspace  jiminy.code-workspace1.code-workspace
examples/cross-program-read/: README.md
examples/cross-program-read/program-a/: Cargo.toml
examples/cross-program-read/program-a/src/: lib.rs  processor.rs  state.rs
examples/cross-program-read/program-b/: Cargo.toml
examples/cross-program-read/program-b/src/: lib.rs  processor.rs  state.rs
examples/jiminy-escrow/: Cargo.toml  README.md
examples/jiminy-escrow/src/: lib.rs  processor.rs  state.rs
examples/jiminy-vault/: Cargo.toml  README.md
examples/jiminy-vault/src/: lib.rs  processor.rs  state.rs
memories/repo/: audit.rs  ecosystem.md
scripts/: check-templates.ps1
src/: accounts.rs  amm.rs  asserts.rs  authority.rs  balance.rs  bits.rs  checks.rs  close.rs  compose.rs  cpi.rs  cpi_guard.rs  cursor.rs  distribute.rs  ed25519.rs  event.rs  header.rs  introspect.rs  lib.rs  log.rs  math.rs  merkle.rs  mint.rs  multisig.rs  pda.rs  prelude.rs  programs.rs  realloc.rs  slippage.rs  staking.rs  sysvar.rs  time.rs  token.rs  token_2022.rs  twap.rs  upgrade.rs
templates/: README.md
templates/escrow/: Cargo.toml  README.md
templates/escrow/src/: lib.rs  processor.rs  state.rs
templates/staking/: Cargo.toml  README.md
templates/staking/src/: lib.rs  processor.rs  state.rs
templates/vault/: README.md
templates/vault/src/: lib.rs  processor.rs  state.rs
ts/jiminy-ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/jiminy-ts/src/: checks.ts  header.ts  index.ts  layouts.ts  segments.ts
ts/jiminy-ts/tests/: checks.test.ts  header.test.ts  layouts.test.ts  segments.test.ts
