[package]
name = "bench-jiminy-vault"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jiminy = { workspace = true }
pinocchio = { workspace = true }

[features]
default = ["bpf-entrypoint"]
bpf-entrypoint = []

[lints]
workspace = true
