[package]
name = "jiminy-core"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
authors = ["MoonManQuark"]
description = "Core systems layer for Jiminy: account layout, zero-copy IO, validation, PDA, sysvar access, math, time checks. Declarative macros for error codes, instruction dispatch, and account uniqueness. no_std, no_alloc, no proc macros, BPF-safe."
readme = "README.md"
repository = "https://github.com/QuarksBlueFoot/jiminy"
homepage = "https://github.com/QuarksBlueFoot/jiminy"
documentation = "https://docs.rs/jiminy-core"
keywords = ["solana", "hopper", "bpf", "zero-copy", "no-std"]
categories = ["no-std", "embedded"]

[lib]
name = "jiminy_core"

[dependencies]
hopper-runtime = { workspace = true }
sha2-const-stable = { workspace = true }
solana-zero-copy = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"

[features]
default = ["programs"]
programs = []
log = []
solana-zero-copy = ["dep:solana-zero-copy"]
## Production hardening mode.
##
## When enabled:
## - `validate_version_compatible` is compile-time disabled (no layout_id skip paths).
## - Forces all loading through layout_id-verified tiers.
strict = []

[lints]
workspace = true
