[package]
name = "jiminy-finance"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"
authors = ["MoonManQuark"]
description = "DeFi math primitives for Jiminy: AMM math, slippage/economic bounds, balance-delta guards. Zero-copy, no_std, no_alloc, BPF-safe."
readme = "README.md"
repository = "https://github.com/QuarksBlueFoot/jiminy"
homepage = "https://github.com/QuarksBlueFoot/jiminy"
documentation = "https://docs.rs/jiminy-finance"
keywords = ["solana", "pinocchio", "defi", "amm", "zero-copy"]
categories = ["no-std", "embedded"]

[lib]
name = "jiminy_finance"

[dependencies]
pinocchio = { workspace = true }
jiminy-core = { path = "../jiminy-core", version = "0.16.0", default-features = false }

[features]
default = []

[lints]
workspace = true
