[package]
name = "jiminy-finance"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
authors = ["MoonManQuark"]
description = "DeFi math primitives for Jiminy: integer square root, constant-product swap formulas, K-invariant verification, price impact, LP minting, slippage guards, oracle deviation checks, price bounds. u128 intermediates, no_std, no_alloc, BPF-safe."
readme = "README.md"
repository = "https://github.com/QuarksBlueFoot/jiminy"
homepage = "https://github.com/QuarksBlueFoot/jiminy"
documentation = "https://docs.rs/jiminy-finance"
keywords = ["solana", "hopper", "defi", "amm", "zero-copy"]
categories = ["no-std", "embedded"]

[lib]
name = "jiminy_finance"

[dependencies]
hopper-runtime = { workspace = true }
jiminy-core = { path = "../jiminy-core", version = "0.17.0", default-features = false }

[features]
default = []

[lints]
workspace = true
