[package]
name = "jiminy-lending"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"
authors = ["MoonManQuark"]
description = "Lending protocol primitives for Jiminy: collateralization ratios, health checks, liquidation math, interest calculations. Zero-copy, no_std, no_alloc, BPF-safe."
readme = "README.md"
repository = "https://github.com/QuarksBlueFoot/jiminy"
homepage = "https://github.com/QuarksBlueFoot/jiminy"
documentation = "https://docs.rs/jiminy-lending"
keywords = ["solana", "pinocchio", "lending", "defi", "zero-copy"]
categories = ["no-std", "embedded"]

[lib]
name = "jiminy_lending"

[dependencies]
pinocchio = { workspace = true }

[features]
default = []

[lints]
workspace = true
