[package]
name = "jiminy-multisig"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
authors = ["MoonManQuark"]
description = "M-of-N multi-signer threshold checks for Jiminy. Zero-copy, no_std, no_alloc, BPF-safe."
readme = "README.md"
repository = "https://github.com/QuarksBlueFoot/jiminy"
homepage = "https://github.com/QuarksBlueFoot/jiminy"
documentation = "https://docs.rs/jiminy-multisig"
keywords = ["solana", "hopper", "multisig", "threshold", "zero-copy"]
categories = ["no-std", "embedded"]

[lib]
name = "jiminy_multisig"

[dependencies]
hopper-runtime = { workspace = true }

[features]
default = []

[lints]
workspace = true
