[package]
name = "jiminy-solana"
version = "0.12.0"
edition = "2021"
license = "Apache-2.0"
authors = ["MoonManQuark"]
description = "Solana platform helpers for Jiminy: token/mint readers, Token-2022 screening, CPI guards, introspection, Ed25519, Merkle proofs, Pyth oracles, authority handoff, TWAP, compute guards. Zero-copy, no_std, no_alloc, BPF-safe."
readme = "README.md"
repository = "https://github.com/QuarksBlueFoot/jiminy"
keywords = ["solana", "pinocchio", "bpf", "zero-copy", "spl-token"]
categories = ["no-std", "embedded"]

[lib]
name = "jiminy_solana"

[dependencies]
pinocchio = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
jiminy-core = { path = "../jiminy-core", version = "0.12.0", default-features = false }

[features]
default = ["programs"]
programs = ["jiminy-core/programs"]

[lints]
workspace = true
