[package]
name = "jiminy-vesting"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"
authors = ["MoonManQuark"]
description = "Vesting schedule helpers for Jiminy: linear+cliff, stepped, periodic unlock, claimable calculations. Zero-copy, no_std, no_alloc, BPF-safe."
readme = "README.md"
repository = "https://github.com/QuarksBlueFoot/jiminy"
homepage = "https://github.com/QuarksBlueFoot/jiminy"
documentation = "https://docs.rs/jiminy-vesting"
keywords = ["solana", "hopper", "vesting", "token-lock", "zero-copy"]
categories = ["no-std", "embedded"]

[lib]
name = "jiminy_vesting"

[dependencies]
hopper-runtime = { workspace = true }

[features]
default = []

[lints]
workspace = true
