[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jiminy = "0.15"

[features]
default = ["bpf-entrypoint"]
bpf-entrypoint = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }
